add create mint

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lightprotocol/compressed-token": "^0.21.0",
+    "@lightprotocol/stateless.js": "^0.21.0",
+    "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
     "@solana/pay": "^0.2.5",
     "@solana/web3.js": "^1.98.2",
     "next": "15.3.2",
