--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@lightprotocol/compressed-token": "^0.20.9",
     "@lightprotocol/stateless.js": "^0.20.9",
     "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
+    "@prisma/client": "^6.7.0",
     "@solana/pay": "^0.2.5",
     "@solana/web3.js": "^1.98.2",
     "next": "15.3.2",
@@ -26,6 +27,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "prisma": "^6.7.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
