--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@lightprotocol/stateless.js": "^0.20.9",
     "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
     "@prisma/client": "^6.7.0",
+    "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
+    "@radix-ui/react-toast": "^1.2.13",
     "@solana/pay": "^0.2.5",
     "@solana/web3.js": "^1.98.2",
     "class-variance-authority": "^0.7.1",
