--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tabs": "^1.1.11",
     "@radix-ui/react-toast": "^1.2.13",
+    "@solana/actions": "^1.6.6",
     "@solana/pay": "^0.2.5",
     "@solana/web3.js": "^1.98.2",
     "class-variance-authority": "^0.7.1",
